# ai-politic-analyser

./: .gitignore  pyproject.toml
src/ai_politic_analyser/modules/html_parser/: __init__.py  example.py  exceptions.py  parser.py
