[project]
name = "ai-politic-analyser"
version = "0.1.0"
description = ""
authors = [
    {name = "Mykhailo Usatenko",email = "mykhailou@ext.inditex.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "ai_politic_analyser", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
