[project]
name = "ai-politic-analyser"
version = "0.1.0"
description = ""
authors = [
    {name = "Mykhailo Usatenko",email = "mykhailou@ext.inditex.com"},
    {name = "Mykhailo Klymchuk (TOP 1 Developer)",email = "klymchukkuhcmylk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0"
]
[tool.poetry]
packages = [{include = "ai_politic_analyser", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
